--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+* {
+  margin-bottom: 4px;
+  background-color: white;
+}
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +10,43 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.App {
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  width: 50%;
+  height: 40vh;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+select {
+  height: 40px;
+  width: 250px;
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  font-weight: bold;
+}
+
+.bitCoinDashboard {
+  
+  width: 300px;
+  height: 150px;
+  
+}
+
+.chartDashboard {
+  text-align: center;
+  
+}
+
+p {
+  color: grey;
+  font-size: small;
+}
+
+.lineChart {
+  background-color: rgb(165, 46, 46);
 }
